# labs

./: CMakeLists.txt  sonar-project.properties
laba1/: Header.h  main.c
laba2/: Header.h  Source.c  list.c
laba2/rearhive/: main.c
laba3/: Header.h  Source.c  main.c
laba4/: Header.h
laba5/: Source.c  main.c
term2/laba1/: Source.c
term2/laba2/list/: main.c
term2/laba2/rearhive/: Header.h  Source.c
term2/laba4/: Source.c  main.c
term2/laba5/: Header.h
